# icns-code-cross-platform

./: .gitignore  AUTHORS  DEVNOTES  Makefile.am  NEWS  README  README.install  autogen  configure.ac  libicns.spec.in
debian/: changelog  control  copyright  icnsutils.copyright  libicns1.copyright
icnsutils/: icns2png.c  icnsutil.c  icontainer2icns-v2.c  icontainer2icns.c  png2icns.c
src/: Makefile.am  apidocs.html  apidocs.txt  icns.h  icns_colormaps.h  icns_debug.c  icns_element.c  icns_family.c  icns_image.c  icns_internals.h  icns_io.c  icns_jp2.c  icns_png.c  icns_rle24.c  icns_utils.c
